--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@
 
 
 body {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
     background-color: linear-gradient(white, var(--cinza));
 }
 
@@ -84,6 +84,7 @@ body {
     gap: 20px;
     flex-wrap: wrap;
     padding: 30px 40px;
+    background-color: #a8a8a8;
 }
 
 .card {
@@ -136,3 +137,10 @@ footer {
     }
 } 
     
+.checkout {
+width: 100px;
+}
+
+.form {
+    padding: 70px;
+}
